# legeberew-project

./: .gitignore  LICENSE  README.md
LeGeberewApp/: App.tsx  app.json  package-lock.json  package.json
LeGeberewApp/android/: settings.gradle
LeGeberewApp/android/app/: build.gradle
LeGeberewApp/android/app/src/main/: AndroidManifest.xml
LeGeberewApp/android/app/src/main/java/com/legeberewapp/: MainActivity.kt  MainApplication.kt  RustCoreModule.kt  RustCorePackage.kt
LeGeberewApp/android/app/src/main/java/uniffi/legeberew/: legeberew.kt
LeGeberewApp/android/app/src/main/res/values/: strings.xml
LeGeberewApp/ios/: Podfile
LeGeberewApp/ios/LeGeberewApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
LeGeberewApp/ios/LeGeberewApp.xcodeproj/: project.pbxproj
LeGeberewApp/ios/LeGeberewApp.xcodeproj/xcshareddata/xcschemes/: LeGeberewApp.xcscheme
rust_core/: Cargo.toml  build.rs
rust_core/src/: legeberew.udl  lib.rs  plant_doctor.tflite
