[package]
name = "legeberew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "uniffi_legeberew"

[dependencies]
uniffi = { version = "0.27", features = ["cli"] }
image = "0.24"
tract-tflite = "0.21"
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
